im/helm/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: im
spec:
  hosts:
  - "im.kokre.dev"
  gateways:
  - im-gateway
  http:
  - match:
    - uri:
        prefix: /metrics
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: im-1629068697
